--- a/scss/_home.scss
+++ b/scss/_home.scss
@@ -1,6 +1,106 @@
+.s-hero {
+  margin-top: 12rem;
+  background-color: $purple;
+  padding-top: 4rem;
 
+  .container {
+    @include flex(row, flex-start, space-between);
+  }
 
+  .text {
+    width: 100%;
+    max-width: 55rem;
 
-// a {
-//   @include style-btn(5.4rem, $yellow, $purple);
-// }
+    h1 {
+      font-family: 'PT Sans', sans-serif;
+      font-weight: bold;
+      font-size: 4.8rem;
+      line-height: 120%;
+      color: $white;
+      margin-bottom: 1.6rem;
+    }
+
+    p {
+      font-size: 1.8rem;
+      line-height: 150%;
+      color: $white;
+      max-width: 48.8rem;
+      margin-bottom: 3.2rem;
+    }
+
+    button {
+      @include style-btn(5.4rem, $yellow, #503387);
+      margin-bottom: 8.6rem;
+    }
+
+    .conheca {
+      @include flex(row, center, flex-start);
+      gap: 1.6rem;
+
+      .icon {
+        width: 4.2rem;
+        height: 4.2rem;
+        background-color: rgba(123, 90, 186, 0.4);
+        border-radius: 0.8rem;
+        @include flex(row, center, center);
+      }
+
+      span {
+        font-weight: bold;
+        font-size: 1.6rem;
+        line-height: 2rem;
+        color: $white;
+      }
+    }
+  }
+
+  .image {
+    position: relative;
+    top: 3.6rem;
+  }
+
+  // Media Queries
+  @include responsive(991px) {
+    .container {
+      flex-direction: column;
+    }
+
+    .text {
+      max-width: 100%;
+      margin-bottom: 3rem;
+
+      h1 {
+        text-align: center;
+      }
+
+      p {
+        max-width: 100%;
+        text-align: center;
+      }
+
+      button {
+        display: block;
+        margin: 0 auto 4rem;
+      }
+
+      .conheca {
+        justify-content: center;
+      }
+    }
+  }
+
+  @include responsive(600px) {
+    padding-top: 2.5rem;
+    margin-top: 8rem;
+
+    .text {
+      h1 {
+        font-size: 4.2rem;
+      }
+    }
+
+    .image {
+      left: -10px;
+    }
+  }
+}
