--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -6,6 +6,7 @@ header {
   height: 12rem;
   background-color: $purple;
   display: flex;
+  z-index: 99;
 
   .container {
     @include flex(row, center, space-between);
